--- a/cost.html
+++ b/cost.html
@@ -4,6 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Alternate Living</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="favicon-96x96.png" type="image/x-icon"/>
         <script defer type="text/javascript" src="cost.js" ></script>
     </head>
     <body id="body2">
