--- a/extra.html
+++ b/extra.html
@@ -5,6 +5,7 @@
         <title>Alternate Living</title>
         <link rel="stylesheet" href="styles.css">
         <script defer type="text/javascript" src="extra.js" ></script>
+        <link rel="icon" href="favicon-96x96.png" type="image/x-icon"/>
     </head>
     <body id="body2">
         <img id="image2" src="img1.jpeg" alt="image2">
