--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="styles.css" rel="stylesheet">
+    <link rel="icon" href="favicon-96x96.png" type="image/x-icon"/>
     <style>
             .register .nav-tabs .nav-link:hover{
                 border: none;
