--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Alternate Living</title>
         <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="favicon-96x96.png" type="image/x-icon"/>
         <script defer type="text/javascript" src="index.js" ></script>
     </head>
     <body>
