--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Alternate Living</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="favicon-96x96.png" type="image/x-icon"/>
     </head>
     <body id="body2">
         <img id="image2" src="img1.jpeg" alt="image2">
