--- a/next.html
+++ b/next.html
@@ -5,6 +5,7 @@
         <title>Alternate Living</title>
         <link rel="stylesheet" href="styles.css">
         <script defer type="text/javascript" src="next.js" ></script>
+        <link rel="icon" href="favicon-96x96.png" type="image/x-icon"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     </head>
     <body id="body2">
