--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <p class="para">After a meeting at United Nations, governments from every nook and corner decided to adopt scientific and far from reality approach. But to safeguard the human civilization on earth some unorthodox and unheard steps must be taken. United Nation has introduced two apps leaving an option to the public to register in it as per own understanding.</p>
         <p class="para">This leaves to two choices after mutual consultation among the governments: -</p>
         <p class="para">1.  Alternate Living: - Mars City</p>
-        <p class="para">    2.  Cyropreservation /Cyrosleep</p>
+        <p class="para">    2.  Cryopreservation /Cryosleep</p>
         <p class="para">But asking people to apply for one of them for their own safety is a very complex task. In order to explain the motive behind and the benefits for adopting one of the two choices write an article putting forward this idea from the government to the public at large.</p>
+        <p class="para">But also explaining them the ground reality of adopting one of these methods and its repercussions.</p>
         <p class="para">Article must include each of the choices you have selected through the minigame. Remember each choice will lead to different outcomes. Think wisely in the selection, fate of the world depends upon your choice.</p>
         <p class="para">You must decide whether it is time to go for ‘Natural selection’ or ‘Selective Selection’.</p>
         <br><br>
