--- a/last.html
+++ b/last.html
@@ -10,7 +10,7 @@
     <body id="body2">
         <img id="image2" src="img1.jpeg" alt="image2">
         <div id="para10">
-            <p>Will humans treat Mars they way they have treated</p>
+            <p>Will humans treat Mars the way they have treated</p>
             <p>Mother Earth?</p> <br>
             <p>What will happen to other creatures on the planet?</p> <br>
             <p>Should we only bother about human civilization?</p> <br>
